[package]
name = "vates_sampler_core"
version = "0.1.0"
edition = "2021"
description = "Vates V-Sampler: sigma schedules, RNG, optional NVML hooks for ComfyUI"
license = "MIT OR Apache-2.0"

[lib]
name = "vates_sampler_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy"]
nvml = ["dep:nvml-wrapper"]

[dependencies]
ndarray = "0.16"
pyo3 = { version = "0.22", optional = true, features = ["extension-module"] }
numpy = { version = "0.22", optional = true }
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"
once_cell = "1.19"
nvml-wrapper = { version = "0.10", optional = true, default-features = false }
