[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "vates_sampler_core"
version = "0.1.0"
description = "Vates V-Sampler Rust extension (sigma schedules, RNG, memory vacuum hooks)"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "vates_sampler_core"
features = ["python"]
